# sielo-ui

./: .gitignore  CMakeLists.txt  build.sbt  icons.qrc
src/: BrowserWindow.cpp  BrowserWindow.hpp  Main.cpp
src/Utils/: ContainerMimeData.cpp  ContainerMimeData.hpp
src/Views/: BubbleButton.cpp  BubbleButton.hpp  Container.cpp  Container.hpp  ContainerDragWidget.cpp  ContainerDragWidget.hpp  ContainersView.cpp  ContainersView.hpp  LateralBar.cpp  LateralBar.hpp  Tab.cpp  Tab.hpp  TabsView.cpp  TabsView.hpp  WebRender.cpp  WebRender.hpp
src/Widgets/: WebRender.hpp
src/main/scala/fr/sieloteam/sieloui/: ScalaUi.scala  SieloUi.scala
src/main/scala/fr/sieloteam/sieloui/starter/: Splash.scala
